minor changes to github test project

--- a/FirstCppAppln/GitTestProject/GitTestProject.vcxproj
+++ b/FirstCppAppln/GitTestProject/GitTestProject.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="GitTestProject.cpp" />
+    <ClCompile Include="SomeClass.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="SomeClass.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
